<resources>
    <string name="app_name">MatePets</string>
    <string name="action_settings">Settings</string>

    <string name="Your_Pets">Your Pets</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="Favorite">Favorite</string>
    <string name="btn_search_category">Search</string>
    <string name="add_petd">Add Pets</string>

    <string-array name="type_pets">
        <item>Type of Pets</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Bird</item>
        <item>Other</item>
    </string-array>

    <string-array name="race_pets">
        <item>Pets Race</item>
        <item>Race 1</item>
        <item>Race 2</item>
        <item>Race 3</item>
        <item>Other</item>
    </string-array>

    <string-array name="gender_pets">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="location">
        <item>Location</item>
        <item>Bandung</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="user_name">Nama :</string>
    <string name="value_name_user">MatePets</string>
    <string name="btn_save_profile">Simpan</string>
    <string name="user_password">Password</string>
    <string name="value_user_password">password</string>
    <string name="user_email">Email</string>
    <string name="value_user_email">nabilap8@gmail.com</string>
    <string name="user_location">Lokasi</string>
    <string name="value_user_lokasi">Bandung</string>
</resources>
