<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.d3ifcool.matepets.ProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/kucing"
        android:scaleType="centerCrop"/>

<LinearLayout
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value_name_user"/>
</LinearLayout>

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/user_password"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_user_password" />
    </LinearLayout>

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_user_email"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="70dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/user_location"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_user_lokasi"/>
    </LinearLayout>




    <LinearLayout
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ivHome"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_home_black_24dp"
            tools:ignore="OnClick" />

        <ImageButton
            android:id="@+id/ivSearh"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_place_black_24dp"/>

        <ImageButton
            android:id="@+id/ivCategory"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_view_list_black_24dp"/>

        <ImageButton
            android:id="@+id/ivInfo"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_library_books_black_24dp"/>
        <ImageButton
            android:id="@+id/ivProfile"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_account_circle_black_24dp"/>
    </LinearLayout>

</LinearLayout>
